# sqlscope

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
src/sqlscope/: __init__.py  dialects.py
src/sqlscope/catalog/: __init__.py  catalog.py  function.py  schema.py  table.py  util.py
src/sqlscope/catalog/builder/: __init__.py  postgres.py  sql.py
src/sqlscope/query/: extractors.py  query.py  tokenized_sql.py
src/sqlscope/query/set_operations/: __init__.py  binary_set_operation.py  select.py  set_operation.py
src/sqlscope/query/typechecking/: __init__.py  base.py  binary_ops.py  functions.py  predicates.py  primitives.py  queries.py  types.py  unary_ops.py
src/sqlscope/util/ast/: __init__.py  column.py
tests/: test_builder_sql.py  test_extractors.py  test_query.py  test_typechecking.py
tests/datasets/: unicorsi.sql
