[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlscope"
version = "1.0.3"
authors = [
  { name="Davide Ponzini", email="davide.ponzini95@gmail.com" },
]
description = "This project extracts catalog and query metadata from a SQL query."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "psycopg2",
    "pyyaml",
    "sqlparse",
    "sqlglot",
    "z3-solver",
    "python-dateutil",
]

[project.urls]
"Repository" = "https://github.com/DavidePonzini/sqlscope"
"Documentation" = "https://sqlscope.readthedocs.io/en/latest/index.html"
"Bug Tracker" = "https://github.com/DavidePonzini/sqlscope/issues"